crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_split_spread_props_with_additional_prop5.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

function Hola(props: any) {
  return <div {...props}></div>;
}

export default component$(() => {
  return (
    <Hola>
      <div>1</div>
      <div>2</div>
    </Hola>
  );
});

=== test.js ===
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
function Hola(props) {
  return /* @__PURE__ */ _jsxSplit(
    "div",
    {
      ..._getVarProps(props),
    },
    _getConstProps(props),
    null,
    0,
    "u6_0",
  );
}
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);
export { Hola as _auto_Hola };

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { _auto_Hola as Hola } from "./test";
import { _jsxSorted } from "@qwik.dev/core";
export const test_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted(
    Hola,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted("div", null, null, "1", 3, null),
      /* @__PURE__ */ _jsxSorted("div", null, null, "2", 3, null),
    ],
    3,
    "u6_1",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
