crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_transform_nested_loops.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal, Signal } from "@qwik.dev/core";
const Foo = component$(function () {
  const data = useSignal<Signal<any>[]>([]);
  const data2 = useSignal<Signal<any>[]>([]);
  return (
    <div>
      {data.value.map((row) => (
        <div onClick$={() => console.log(row.value.id)}>
          {data2.value.map((item) => (
            <p onClick$={() => console.log(row.value.id, item.value.id)}>
              {row.value.id}-{item.value.id}
            </p>
          ))}
        </div>
      ))}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
/* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"));

=== test.tsx_Foo_component_XXXXXXXXXXXX.js === (ENTRY)
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value.id;
const _hf0_str = "p0.value.id";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_div_q_e_click_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = function () {
  const data = useSignal([]);
  const data2 = useSignal([]);
  const Foo_component_div_div_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "Foo_component_div_div_q_e_click_XXXXXXXXXXXX",
  );
  const Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX",
    [row],
  );
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    data.value.map((row) =>
      /* @__PURE__ */ _jsxSorted(
        "div",
        {
          "q-e:click": Foo_component_div_div_q_e_click_XXXXXXXXXXXX,
          "q:p": row,
        },
        null,
        data2.value.map((item) =>
          /* @__PURE__ */ _jsxSorted(
            "p",
            {
              "q-e:click": Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX,
              "q:p": item,
            },
            null,
            [_fnSignal(_hf0, [row], _hf0_str), "-", _fnSignal(_hf0, [item], _hf0_str)],
            0,
            "u6_0",
          ),
        ),
        0,
        "u6_1",
      ),
    ),
    1,
    "u6_2",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_component_div_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Foo_component_div_div_q_e_click_XXXXXXXXXXXX = (_, _1, row) =>
  console.log(row.value.id);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_div_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "paramNames": [
    "_",
    "_",
    "row"
  ]
}
*/

=== test.tsx_Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX = (_, _1, item) => {
  const row = _captures[0];
  return console.log(row.value.id, item.value.id);
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_p_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_div_div_p_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "item"
  ],
  "captureNames": [
    "row"
  ]
}
*/

=== DIAGNOSTICS ===

[]
