crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_transform_qrls_in_ternary_expression.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const enabled = useSignal(false);
  const input = useSignal("");

  return (
    <input
      id="input"
      onInput$={
        enabled.value
          ? $((ev, el) => {
              input.value = el.value;
            })
          : undefined
      }
      onFocus$={() => {
        enabled.value = true;
      }}
    />
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_FieldInput_component_XXXXXXXXXXXX");
export const FieldInput = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "FieldInput_component_XXXXXXXXXXXX"),
);

=== test.tsx_FieldInput_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_FieldInput_component_input_q_e_focus_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_FieldInput_component_input_q_e_input_XXXXXXXXXXXX");
export const FieldInput_component_XXXXXXXXXXXX = () => {
  const enabled = useSignal(false);
  const input = useSignal("");
  return /* @__PURE__ */ _jsxSorted(
    "input",
    {
      "q-e:input": enabled.value
        ? /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "FieldInput_component_input_q_e_input_XXXXXXXXXXXX", [
            input,
          ])
        : undefined,
    },
    {
      id: "input",
      "q-e:focus": /* @__PURE__ */ qrl(
        i_XXXXXXXXXXXX,
        "FieldInput_component_input_q_e_focus_XXXXXXXXXXXX",
        [enabled],
      ),
    },
    null,
    2,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_FieldInput_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_FieldInput_component_input_q_e_input_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const FieldInput_component_input_q_e_input_XXXXXXXXXXXX = (ev, el) => {
  const input = _captures[0];
  input.value = el.value;
};

/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_input_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_input",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_input_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "paramNames": [
    "ev",
    "el"
  ],
  "captureNames": [
    "input"
  ]
}
*/

=== test.tsx_FieldInput_component_input_q_e_focus_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const FieldInput_component_input_q_e_focus_XXXXXXXXXXXX = () => {
  const enabled = _captures[0];
  enabled.value = true;
};

/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_focus_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_focus",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_focus_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onFocus$",
  "captures": true,
  "captureNames": [
    "enabled"
  ]
}
*/

=== DIAGNOSTICS ===

[]
